--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -8,6 +8,12 @@
 	<key>CFBundleName</key>
     <string>MeQat</string>
 
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>audio</string>
+        <string>fetch</string>
+    </array>
+
     <key>NSLocationWhenInUseUsageDescription</key>
     <string>Your location is needed to display your current location on the map.</string>
 
@@ -28,8 +34,6 @@
 
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>meqat</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
