--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,15 +39,18 @@ dependencies:
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.1
   image_picker: ^1.1.2
+  google_mlkit_barcode_scanning: ^0.7.0
   flutter_tts: ^3.8.5
   google_ml_kit: ^0.15.0
   google_mlkit_face_detection: ^0.7.0
   tflite_flutter: ^0.11.0
   connectivity_plus: ^6.1.3
   fluttertoast: ^8.2.2
-  firebase_core: ^2.15.0
-  cloud_firestore: ^4.11.0
-
+  flutter_local_notifications: ^16.3.2
+  android_alarm_manager_plus: ^3.0.3
+  firebase_core: ^3.12.1
+  firebase_auth: ^5.5.2
+  cloud_firestore: ^5.6.5
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -55,9 +58,14 @@ dependencies:
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/img5.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
