--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -34,6 +34,13 @@
 
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+
+	<key>NSMicrophoneUsageDescription</key>
+    <string>We need your microphone for speech recognition</string>
+    <key>NSSpeechRecognitionUsageDescription</key>
+    <string>We need access to speech recognition</string>
+
+
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
