--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,38 +30,46 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   local_auth: ^2.1.6
+
   shared_preferences: ^2.3.3
+
   audioplayers: ^1.1.1
+
   google_maps_flutter: ^2.6.0
   geolocator: ^11.0.0
-  window_manager: ^0.4.3
+
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.1
+
   image_picker: ^1.1.2
-  google_mlkit_barcode_scanning: ^0.7.0
-  google_ml_kit: ^0.15.0
+
   google_mlkit_face_detection: ^0.7.0
+
   tflite_flutter: ^0.11.0
-  connectivity_plus: ^6.1.3
-  fluttertoast: ^8.2.2
-  flutter_local_notifications: ^16.3.2
-  android_alarm_manager_plus: ^3.0.3
-  firebase_core: ^3.12.1
-  firebase_auth: ^5.5.2
-  cloud_firestore: ^5.6.5
+
+  firebase_core: ^2.25.4
+  cloud_firestore: ^4.15.4
+
   speech_to_text: ^6.4.1
+  flutter_tts: ^3.6.3
   smooth_page_indicator: ^1.1.0
-  in_app_purchase: ^3.2.0
-  image_cropper: ^1.0.8
+
+
   path_provider: ^2.1.1
-  convert: ^3.1.1
-  archive: ^3.3.6
+
   uuid: ^3.0.7
   image: ^4.0.15
 
+  zxing2:
+  flutter_archive:
 
+  supabase_flutter: ^1.10.23
 
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -92,15 +100,16 @@ flutter:
     - assets/alarm2.mp3
     - assets/alarm1.mp3
 
-    - assets/icon/img5.png
+    -  assets/facenet.zip
 
-    - assets/facenet.tflite
+    - assets/icon/img5.png
 
     - assets/img/food.png
     - assets/img/hotel.png
     - assets/img/shop.png
 
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
