--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -8,6 +8,12 @@
 	<key>CFBundleName</key>
     <string>MeQat</string>
 
+<key>UIBackgroundModes</key>
+<array>
+    <string>audio</string>
+    <string>fetch</string>
+</array>
+
     <key>UIBackgroundModes</key>
     <array>
         <string>audio</string>
