--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -129,7 +129,7 @@ flutter:
 
     - assets/img/niya.webp
     - assets/img/talbiya.webp
-    - assets/img/dont.webp
+    - assets/img/dont.wep
     - assets/img/clean.webp
 
     - assets/img/cut_hair.webp
